--- a/styles/stock_list.css
+++ b/styles/stock_list.css
@@ -4,7 +4,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: relative;
 }
 
 .stock_list_wrapper {
